<resources>
    <string name="app_name">Calculator</string>
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="MS">MS</string>
    <string name="MPlus">M+</string>
    <string name="MMinus">M-</string>
    <string name="back">←</string>
    <string name="CE">CE</string>
    <string name="C">C</string>
    <string name="plusMinus">±</string>
    <string name="squareRoot">√</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num3">3</string>
    <string name="num2">2</string>
    <string name="num1">1</string>
    <string name="num0">0</string>
    <string name="division">/</string>
    <string name="procent">%</string>
    <string name="multi">*</string>
    <string name="oneDividedByX">1/𝑥</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
</resources>