<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:weightSum="8"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/workingsTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="top|right"
        android:textColor="@color/black"
        android:layout_weight="0.5"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/resultsTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:gravity="bottom|right"
        android:text="0"
        android:textColor="@color/black"
        android:layout_weight="1.5"
        android:textSize="40sp"/>
  
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/MC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/MC"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/MR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/MR"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/MS"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/MS"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/MPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/MPlus"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/MMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/MMinus"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="delOneSymbolOnClick"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue2"
            android:text="@string/back"
            android:textColor="@color/black"
            android:gravity="center|top"
            android:textSize="40sp" />

        <Button
            android:id="@+id/clearEverything"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="clearOnClick"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue2"
            android:text="@string/CE"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue2"
            android:text="@string/C"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/plusMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changeSignOnClick"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue2"
            android:text="@string/plusMinus"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/squareRoot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="rootSquareOnClick"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/squareRoot"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/num7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:onClick="sevenOnClick"
            android:backgroundTint="@color/blue2"
            android:text="@string/num7"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/num8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:onClick="eightOnClick"
            android:backgroundTint="@color/blue2"
            android:text="@string/num8"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/num9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:onClick="nineOnClick"
            android:backgroundTint="@color/blue2"
            android:text="@string/num9"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:onClick="divisionOnClick"
            android:backgroundTint="@color/blue2"
            android:text="@string/division"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/procent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/procent"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/num4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:onClick="fourOnClick"
            android:backgroundTint="@color/blue2"
            android:text="@string/num4"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/num5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:onClick="fiveOnClick"
            android:backgroundTint="@color/blue2"
            android:text="@string/num5"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/num6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:onClick="sixOnClick"
            android:backgroundTint="@color/blue2"
            android:text="@string/num6"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/multi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:onClick="multiplyOnClick"
            android:backgroundTint="@color/blue2"
            android:text="@string/multi"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/oneDividedByX"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/oneDividedByX"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/num3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:onClick="threeOnClick"
                        android:backgroundTint="@color/blue2"
                        android:text="@string/num3"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/num2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="3dp"
                        android:onClick="twoOnClick"
                        android:backgroundTint="@color/blue2"
                        android:text="@string/num2"
                        android:textColor="@color/black"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="0">

                    <Button
                        android:id="@+id/num0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:onClick="zeroOnClick"
                        android:backgroundTint="@color/blue1"
                        android:text="@string/num0"
                        android:textColor="@color/black"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/num1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="3dp"
                        android:onClick="oneOnClick"
                        android:backgroundTint="@color/blue2"
                        android:text="@string/num1"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/dot"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="3dp"
                        android:onClick="dotOnClick"
                        android:backgroundTint="@color/blue2"
                        android:text="@string/dot"
                        android:textColor="@color/black"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/plus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="3dp"
                        android:onClick="plusOnClick"
                        android:backgroundTint="@color/blue2"
                        android:text="@string/plus"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/minus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="3dp"
                        android:onClick="minusOnClick"
                        android:backgroundTint="@color/blue2"
                        android:text="@string/minus"
                        android:textColor="@color/black"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/equal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="3dp"
                        android:onClick="equalOnClick"
                        android:backgroundTint="@color/blue1"
                        android:text="@string/equal"
                        android:textColor="@color/black"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
  </LinearLayout>